--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -17,12 +17,12 @@ jobs:
     
     - name: Build
       run: |
-        xcodebuild -scheme "eduTable" \
+        xcodebuild -scheme "Classdule" \
                    -destination "platform=iOS Simulator,name=iPhone 16,OS=17.0" \
                    build
     
     - name: Run tests
       run: |
-        xcodebuild -scheme "eduTable" \
+        xcodebuild -scheme "Classdule" \
                    -destination "platform=iOS Simulator,name=iPhone 16,OS=17.0" \
                    test
