--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -7,22 +7,22 @@ on:
 
 jobs:
   build-and-test:
-    runs-on: macos-latest
+    runs-on: macos-latest-large
     
     steps:
     - uses: actions/checkout@v4
     
     - name: Select Xcode version
-      run: sudo xcode-select -s /Applications/Xcode_16.2.app/Contents/Developer
+      run: sudo xcode-select -s /Applications/Xcode_16.4.app/Contents/Developer
     
     - name: Build
       run: |
         xcodebuild -scheme "Classdule" \
-                   -destination "platform=iOS Simulator,name=iPhone 16,OS=17.0" \
+                   -destination "platform=iOS Simulator,name=iPhone 16,OS=18.6" \
                    build
     
     - name: Run tests
       run: |
         xcodebuild -scheme "Classdule" \
-                   -destination "platform=iOS Simulator,name=iPhone 16,OS=17.0" \
+                   -destination "platform=iOS Simulator,name=iPhone 16,OS=18.6" \
                    test
