--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -4,9 +4,11 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  workflow_dispatch:
 
 jobs:
   build-and-test:
+    if: contains(github.event.head_commit.message, '[ci]') || github.event_name == 'pull_request'
     runs-on: macos-latest-large
     
     steps:
@@ -14,15 +16,7 @@ jobs:
     
     - name: Select Xcode version
       run: sudo xcode-select -s /Applications/Xcode_16.4.app/Contents/Developer
-    
-    - name: Build
+
+    - name: Build and Test
       run: |
-        xcodebuild -scheme "Classdule" \
-                   -destination "platform=iOS Simulator,name=iPhone 16,OS=18.6" \
-                   build
-    
-    - name: Run tests
-      run: |
-        xcodebuild -scheme "Classdule" \
-                   -destination "platform=iOS Simulator,name=iPhone 16,OS=18.6" \
-                   test
+          xcodebuild -scheme "Classdule" -destination "platform=iOS Simulator,name=iPhone 16,OS=18.4" build
